New in v0.6.07 (2009/??/??)
---------------------------
Applied patch 467391 to close connection on a 401 and retry
with authentication credentials.

487686 re-add scp backend and make available via command line option
Option --use-scp will use scp, not sftp, for get/put operations.

459511 --tempdir option doesn't override TMPDIR

Merged in lp:~mterry/duplicity/typos-0.6
Merged in lp:~mterry/duplicity/optparse
Merged in lp:~mterry/duplicity/rename


New in v0.6.06 (2009/10/29)
---------------------------
Merged in lp:~mterry/duplicity/list-old-chains
List/keep old signature chains

Applied patches from Kasper Brand that fixed device file handling.
http://lists.gnu.org/archive/html/duplicity-talk/2009-09/msg00001.html

Merged in lp:~l2g/duplicity/flag-transl-comments which cleared up how
translation comments should be passed to the translators cleanly now.

Applied 422477; [PATCH] IMAP Backend Error in delete()

Merged in lp:~mterry/duplicity/iterate-warnings
Add machine codes to various warnings when iterating over source files

Fix problems with unittests under Jaunty.  It appears that redirection
in os.system() has changed for the worse, so a workaround for now.

Fix problem in restart where there were no manifest entries and no
remote volumes stored.  We clean out the partial and restart.

Fixed 435975 gpg asks for password in 0.6.05, but not in 0.5.18


New in v0.6.05 (2009/08/28)
---------------------------
Merged in lp:~l2g/duplicity/test-compat from Larry Gilbert which made
the testing compatible across more systems.  Also fixed the remaining
collectionstest bug which was trying to test with no cache present.

Bugs fixed this release:
407968  GIO backend can't restore
408059  Failure due to _logger.log failure for content with special
        characters: TypeError decoding Unicode not supported
409593  deja-dup (or duplicity) deletes all signatures
412667  "duplicity remove-older-than" asks for passphrase even though
        not required